# OMPEval

./: CMakeLists.txt
conda-recipe/: bld.bat  build.sh  meta.yaml
omp/: Random.h
